--- a/style.css
+++ b/style.css
@@ -128,3 +128,23 @@ hr {
   width: 80%;
   margin: auto;
 }
+
+/* footer */
+
+.last-hr{
+  margin: 40px auto 15px;
+}
+
+#footer{
+  text-align: center;
+  padding-bottom: 15px;
+}
+.footer-link{
+  color: grey;
+  text-decoration: none;
+}
+
+.footer-link:hover{
+  text-decoration: none;
+  color: grey;
+}
