--- a/style.css
+++ b/style.css
@@ -129,6 +129,30 @@ hr {
   margin: auto;
 }
 
+#contact h1{
+  margin-bottom: 45px;
+}
+
+.fa-envelope{
+  font-size: 30px;
+  padding: 15px;
+}
+
+#myInp{
+  padding: 3px 1px 6px 10px;
+}
+
+.btn{
+  padding-top: 2px;
+  padding-bottom: 2px;
+}
+
+@media (max-width: 700px){
+  .btn{
+    visibility: hidden;
+  }
+}
+
 /* footer */
 
 .last-hr{
